--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "really opinionated JS bundler Edit",
   "main": "index.js",
+  "bin": {
+    "pakit": "./bin/cli.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +21,26 @@
   "bugs": {
     "url": "https://github.com/MiguelCastillo/pakit/issues"
   },
-  "homepage": "https://github.com/MiguelCastillo/pakit#readme"
+  "homepage": "https://github.com/MiguelCastillo/pakit#readme",
+  "dependencies": {
+    "babel-core": "^6.20.0",
+    "bit-bundler": "^5.3.2",
+    "bit-bundler-extractsm": "^1.0.1",
+    "bit-bundler-minifyjs": "^1.0.4",
+    "bit-bundler-splitter": "^3.0.0",
+    "bit-eslint": "^1.1.3",
+    "bit-loader-babel": "^1.0.5",
+    "bit-loader-builtins": "^2.0.0",
+    "bit-loader-css": "^1.1.5",
+    "bit-loader-excludes": "^1.0.1",
+    "bit-loader-extensions": "^1.0.1",
+    "bit-loader-httpresource": "^1.0.1",
+    "bit-loader-js": "^1.2.2",
+    "bit-loader-json": "^1.1.4",
+    "eslint-plugin-react": "^6.8.0",
+    "fs-extra": "^1.0.0",
+    "grunt": "^1.0.1",
+    "resolve": "^1.2.0",
+    "subarg": "^1.0.0"
+  }
 }
