--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "bit-bundler-extractsm": "^1.0.1",
     "bit-bundler-minifyjs": "^1.0.4",
     "bit-bundler-splitter": "^3.0.0",
-    "bit-eslint": "^1.1.3",
     "bit-loader-babel": "^1.0.5",
     "bit-loader-builtins": "^2.0.0",
     "bit-loader-css": "^1.1.5",
+    "bit-loader-eslint": "^1.1.3",
     "bit-loader-excludes": "^1.0.1",
     "bit-loader-extensions": "^1.0.1",
     "bit-loader-httpresource": "^1.0.1",
