enabled builtins by default again

--- a/.bundlerrc.json
+++ b/.bundlerrc.json
@@ -8,5 +8,6 @@
   "js": { "extensions": ["js"] },
   "css": { "extensions": ["css"] },
   "json": { "extensions": ["json"] },
-  "httpresources": {}
+  "httpresources": {},
+  "builtins": {}
 }
