--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bit-bundler-splitter": "^3.0.0",
     "bit-loader-babel": "^1.0.5",
     "bit-loader-builtins": "^2.0.0",
+    "bit-loader-cache": "^1.0.7",
     "bit-loader-css": "^1.1.5",
     "bit-loader-eslint": "^1.1.3",
     "bit-loader-excludes": "^1.0.1",
