disable caching by default

--- a/.bundlerrc.json
+++ b/.bundlerrc.json
@@ -11,7 +11,7 @@
   "babel": { "extensions": ["js"] },
   "httpresource": {},
   "builtins": {},
-  "cache": {},
+  "cache": false,
 
   "shards": {}
 }
