adding shimmer loader to the list of default plugins

--- a/.bundlerrc.json
+++ b/.bundlerrc.json
@@ -2,6 +2,7 @@
   "remove": [],
   "excludes": [],
   "extensions": ["js", "css", "json"],
+  "shimmer": {},
 
   "eslint": { "extensions": ["js"] },
 
