--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "bin": {
     "pakit": "./bin/cli.js"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "mocha --require babel-register"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MiguelCastillo/pakit.git"
@@ -41,5 +43,11 @@
     "fs-extra": "^5.0.0",
     "resolve": "^1.5.0",
     "subarg": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1"
   }
 }
