big refactor and desfult eslint settings
1. Default eslint settings
2. Big refactor to organize the code a bit better
3. Changed unit test to take into account module dependencies
4. Introduced eslint

--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -19,7 +19,7 @@
     "semi": 1,
     "global-strict": 0,
     "wrap-iife": [2, "inside"],
-    "quotes": [1, "double"],
+    "quotes": [1, "double", { "allowTemplateLiterals": true }],
     "key-spacing": 0,
     "no-trailing-spaces": 0,
     "eol-last": 2
