--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pakit": "./bin/cli.js"
   },
   "scripts": {
-    "test": "mocha --require babel-register"
+    "test": "eslint src/**/*.js test/**/*.js && mocha --require babel-register"
   },
   "repository": {
     "type": "git",
