--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
+    "eslint": "^4.13.1",
     "mocha": "^4.0.1"
   }
 }
