Updated all dependencies. Also updated to the new @bit family of packages. When upgrading to use @bit I found a bug in bundler-splitter as well as bundler-minifyjs. https://github.com/MiguelCastillo/bit-bundler-splitter/commit/5c9e674b9504b5cb8f77a38afdc229d20bc0331a and https://github.com/MiguelCastillo/bit-bundler-minifyjs/commit/b0d24b022c1272a89ce1ef4b22aad7d3e088e0a9.

--- a/package.json
+++ b/package.json
@@ -23,35 +23,35 @@
   },
   "homepage": "https://github.com/MiguelCastillo/pakit#readme",
   "dependencies": {
-    "belty": "^5.2.1",
-    "bit-bundler": "^11.0.0",
-    "bit-bundler-extractsm": "^2.1.4",
-    "bit-bundler-minifyjs": "^3.1.0",
-    "bit-bundler-splitter": "^6.0.0",
-    "bit-loader-babel": "^2.0.0",
-    "bit-loader-builtins": "^2.0.2",
-    "bit-loader-cache": "^1.2.0",
-    "bit-loader-css": "^1.1.6",
-    "bit-loader-eslint": "^1.3.0",
-    "bit-loader-excludes": "^1.0.2",
-    "bit-loader-extensions": "^1.0.1",
-    "bit-loader-httpresource": "^1.0.2",
-    "bit-loader-js": "^1.2.2",
-    "bit-loader-json": "^1.2.0",
-    "bit-loader-remove": "^1.0.2",
-    "bit-loader-shimmer": "^1.1.0",
-    "bit-loader-sourcemaps": "^0.1.1",
-    "chalk": "^2.3.0",
-    "fs-extra": "^6.0.1",
-    "glob": "^7.1.2",
-    "resolve": "^1.5.0",
+    "belty": "^5.2.2",
+    "@bit/bundler": "^12.1.3",
+    "@bit/bundler-extractsm": "^2.1.5",
+    "@bit/bundler-minifyjs": "^3.1.2",
+    "@bit/bundler-splitter": "^7.0.3",
+    "@bit/loader-babel": "^4.0.1",
+    "@bit/loader-builtins": "^2.0.3",
+    "@bit/loader-cache": "^2.0.0",
+    "@bit/loader-css": "^1.1.9",
+    "@bit/loader-eslint": "^1.3.1",
+    "@bit/loader-excludes": "^1.0.2",
+    "@bit/loader-extensions": "^1.0.1",
+    "@bit/loader-httpresource": "^1.0.3",
+    "@bit/loader-js": "^1.2.3",
+    "@bit/loader-json": "^1.2.1",
+    "@bit/loader-remove": "^1.0.3",
+    "@bit/loader-shimmer": "^1.1.1",
+    "@bit/loader-sourcemaps": "^0.1.2",
+    "chalk": "^4.1.0",
+    "fs-extra": "^9.0.1",
+    "glob": "^7.1.6",
+    "resolve": "^1.19.0",
     "subarg": "^1.0.0"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
-    "eslint": "^4.16.0",
-    "mocha": "^5.0.0"
+    "chai": "^4.2.0",
+    "eslint": "^7.16.0",
+    "mocha": "^8.2.1"
   }
 }
