--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "homepage": "https://github.com/MiguelCastillo/pakit#readme",
   "dependencies": {
-    "belty": "^5.2.2",
     "@bit/bundler": "^12.1.3",
     "@bit/bundler-extractsm": "^2.1.5",
     "@bit/bundler-minifyjs": "^3.1.2",
@@ -41,17 +40,17 @@
     "@bit/loader-remove": "^1.0.3",
     "@bit/loader-shimmer": "^1.1.1",
     "@bit/loader-sourcemaps": "^0.1.2",
+    "belty": "^5.2.2",
     "chalk": "^4.1.0",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
+    "jest": "^27.5.1",
     "resolve": "^1.19.0",
     "subarg": "^1.0.0"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
-    "chai": "^4.2.0",
-    "eslint": "^7.16.0",
-    "mocha": "^8.2.1"
+    "eslint": "^7.16.0"
   }
 }
